--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@tailwindcss/vite": "^4.0.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
